--- a/src/productTools/identify/identi-fy.html
+++ b/src/productTools/identify/identi-fy.html
@@ -9,7 +9,7 @@
           md-tooltip="position: bottom; text: Yes, delete please;" md-waves="color: light;" class="tr-green"
           click.trigger="yesDeleteTable(activeTable)"><i class="material-icons icon-grey">check</i></a>
         <a id='save' md-button="floating: true;" md-tooltip="position: bottom; text: Save the results locally;"
-          md-waves="color: light;" class="tr-green" click.trigger="saveIdentifyGeojson(activeTable)"
+          md-waves="color: light;" class="tr-green" click.trigger="requestGeojsonFromBasemap(activeTable)"
           download="activeTable.geojson" href="${uriContent}"><i
             class="material-icons icon-grey">file_download</i></a>
         <a id='deleteIndentifyTable' md-button="floating: true;"
