Chnaged legend label font for charts. Added toolNotification custom element to show tool notifications and errors. It is added as a global resource and it is an element of basemap. It is triggered by publishing on the event aggregator open-tool-notification channel. EA message is an object setting the value of the controllong variable to true and message key that specifies which message from toolNotification.json should be displayed. It is closed form the component by publishing a false in EA close-tool-notification channel which changes the window controlling variable to false.

--- a/src/basemap.html
+++ b/src/basemap.html
@@ -41,7 +41,7 @@
       <!-- <require from="productTools/identify/identi-fy"></require> -->
       <identi-fy show.bind="buttonCheck.identify.state"></identi-fy>
       <require from="productTools/tsChart/chart-el"></require>
-      <chart-el show.bind="tsChartWindow"></chart-el>
+      <chart-el show.bind="tsChartWindow" class="chart-height"></chart-el>
       <!-- Time series chart options -->
       <require from="productTools/tsChart/ts-chart"></require>
       <ts-chart show.bind="buttonCheck.tsChart.state"></ts-chart>
@@ -49,4 +49,5 @@
       <identi-fy show.bind="buttonCheck.zonalStat.state"></identi-fy>
     </div>
   </div>
+  <tool-notification show.bind="toolNotification"></tool-notification>
 </template>
