--- a/src/productTools/tsChart/chart-el.html
+++ b/src/productTools/tsChart/chart-el.html
@@ -11,8 +11,6 @@
     </div>
     </div>
     <div class="row tool-options-wrapper">
-      <canvas id="chart" class="chart-height"></canvas>
-
+      <canvas id="chart"></canvas>
     </div>
-
 </template>
