Added download chart functionallity. The chart is downloaded as png image.

--- a/src/productTools/tsChart/chart-el.html
+++ b/src/productTools/tsChart/chart-el.html
@@ -5,7 +5,7 @@
       <h5 class='table-controll-title white-text'>TIME SERIES CHART</h5>
       <span>
         <a id='yesDelete' show.bind="tsChartWindowDelete" md-button="floating: true;" md-tooltip="position: bottom; text: Yes, delete please;" md-waves="color: light;" class="tr-green" click.trigger="yesDeleteChart()"><i class="material-icons icon-grey">check</i></a>
-        <a id='save' md-button="floating: true;" md-tooltip="position: bottom; text: Save the results locally;" md-waves="color: light;" class="tr-green" click.trigger="saveIdentifyGeojson(activeTable)" download="activeTable.geojson" href="${uriContent}"><i class="material-icons icon-grey">file_download</i></a>
+        <a id='save' md-button="floating: true;" md-tooltip="position: bottom; text: Save the results locally;" md-waves="color: light;" class="tr-green" click.trigger="downloadChart()" download="tsChart.png" href=""><i class="material-icons icon-grey">file_download</i></a>
         <a id='deleteIndentifyTable' md-button="floating: true;" md-tooltip="position: bottom; text: Delete the results table?;" md-waves="color: light;" class="tr-green" click.trigger="confirmDeleteChart()"><i class="material-icons icon-grey">${resultsTables[activeTable].delete ? 'close' : 'delete'}</i></a>
       </span>
     </div>
