--- a/src/productTools/tsChart/ts-chart.html
+++ b/src/productTools/tsChart/ts-chart.html
@@ -20,7 +20,7 @@
         <div class="row  tool-options-wrapper">
             <div id="ts-date-slider"></div>
         </div>
-        <div class="row">Pick the time series chart locations on the map maximim is 10 per request</div>
+        <div class="row">Pick the time series chart locations on the map. Maximim is 10 per request</div>
         <div class="row align-center">
           <div class="col s12 m4 l2"><p></p></div>
           <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light" click.trigger="tsChartRequest()">Submit</a></div>
