--- a/src/login.html
+++ b/src/login.html
@@ -6,9 +6,11 @@
   </div>
   <form autocomplete="off" role = "form" submit.delegate = "login()" enctype="multipart/form-data">
     <div class="row align-center">
-      <div class="col s2 m2 l2"><p></p></div>
-      <div class="col s8 m8 l8"><h2 class="brown-text">Login</h2></div>
-      <div class="col s2 m2 l2"><p></p></div>
+      <div class="col s12 m4 l2"><p></p></div>
+      <div class="col s12 m12 l12">
+        <h2 class="brown-text">Login</h2>
+      </div>
+      <div class="col s12 m4 l2"><p></p></div>
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
@@ -52,7 +54,7 @@
   </div>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light" name="facebook">Follow us on Facebook</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light" name="facebook" href="https://www.facebook.com/LocalMapper" target="_blank">Follow us on Facebook</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
 </template>
