Implemented profile chart tool.

--- a/src/basemap.html
+++ b/src/basemap.html
@@ -49,6 +49,8 @@
       <!-- Indentify Table -->
       <!-- <require from="productTools/identify/identi-fy"></require> -->
       <identi-fy show.bind="buttonCheck.identify.state"></identi-fy>
+      <!-- Profile line Table -->
+      <identi-fy show.bind="buttonCheck.profile.state"></identi-fy>
     </div>
   </div>
   <tool-notification show.bind="toolNotification"></tool-notification>
