--- a/src/productTools/zonalTsChart/zonal-ts-chart.html
+++ b/src/productTools/zonalTsChart/zonal-ts-chart.html
@@ -23,7 +23,7 @@
         <div class="row">Draw the time series chart polygon on the map. Maximum is 1 per request and maximum area of single polygon is 1000000 m<sup>2</sup> </div>
         <div class="row align-center">
           <div class="col s12 m4 l2"><p></p></div>
-          <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light" click.trigger="tsChartRequest()">Submit</a></div>
+          <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light" click.trigger="zonalTSChartRequest()">Submit</a></div>
           <div class="col s12 m4 l2"><p></p></div>
         </div>
       </div>
