Added preloader to indicate server is working and user should wait for results. Preloader is implemented in similar manner as toolNotification.

--- a/src/basemap.html
+++ b/src/basemap.html
@@ -54,4 +54,6 @@
     </div>
   </div>
   <tool-notification show.bind="toolNotification"></tool-notification>
+  <tool-preloader show.bind="toolPreloader"></tool-preloader>
+
 </template>
