--- a/src/registration.html
+++ b/src/registration.html
@@ -2,7 +2,7 @@
   <form autocomplete="off" role = "form" submit.delegate = "register()">
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"><h2>Registration</h2></div>
+      <div class="col s12 m4 l8"><h2 t="registration"></h2></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <div class="row align-center">
@@ -10,7 +10,8 @@
       <div class="col s12 m4 l8">
         <div validation-errors.bind="firstNameErrors">
           <input id="firstName" class="align-center" type="text" value.bind = "firstName & validateOnChangeOrBlur"/>
-          <h5>First name <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of firstNameErrors">${errorInfo.error.message}</span></h5>
+          <!-- <h5 t="[prepend]first-name"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of firstNameErrors">${errorInfo.error.message}</span></h5> -->
+          <h5 t="[prepend]first-name"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of firstNameErrors">${errorInfo.error.message}</span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -20,7 +21,7 @@
       <div class="col s12 m4 l8">
         <div validation-errors.bind="lastNameErrors">
           <input id="lastName" class="align-center" type="text" value.bind = "lastName & validateOnChangeOrBlur"/>
-          <h5>Last name <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of lastNameErrors">${errorInfo.error.message}</span></h5>
+          <h5 t="[prepend]last-name"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of lastNameErrors">${errorInfo.error.message}</span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -30,7 +31,7 @@
       <div class="col s12 m4 l8">
         <div validation-errors.bind="userNameErrors">
           <input id="userName" class="align-center" type="text" value.bind = "userName & validateOnChangeOrBlur"/>
-          <h5>Username <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of userNameErrors">${errorInfo.error.message}</span></h5>
+          <h5 t="[prepend]username"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of userNameErrors">${errorInfo.error.message}</span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -40,7 +41,7 @@
       <div class="col s12 m4 l8">
         <div validation-errors.bind="emailErrors">
           <input id="email" class="align-center" type="text" value.bind = "email & validateOnChangeOrBlur"/>
-          <h5>Email <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of emailErrors">${errorInfo.error.message}</span></h5>
+          <h5 t="[prepend]email"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of emailErrors">${errorInfo.error.message}</span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -50,7 +51,7 @@
       <div class="col s12 m4 l8">
           <div validation-errors.bind="passwordErrors">
             <input id="password" class="align-center"type.bind="passwordType" value.bind = "password & validateOnChangeOrBlur"/>
-            <h5>Password <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors">${errorInfo.error.message}</span></h5>
+            <h5 t="[prepend]password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors">${errorInfo.error.message}</span></h5>
           </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -60,7 +61,7 @@
       <div class="col s12 m4 l8">
         <div validation-errors.bind="confirmPasswordErrors">
           <input id="confirmPassword" class="align-center" type.bind="passwordType" value.bind = "confirmPassword & validateOnChangeOrBlur"/>
-          <h5>Confirm password<span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of confirmPasswordErrors">${errorInfo.error.message}</span></h5>
+          <h5 t="[prepend]confirm-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of confirmPasswordErrors">${errorInfo.error.message}</span></h5>
         </div>
       </div>
       <span><i class="grow material-icons" click.trigger="revealPassword()">remove_red_eye</i></span>
@@ -71,13 +72,13 @@
     <notification></notification>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light transparent-title" type="submit" name="register-submit">Submit</button></div>
+      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light transparent-title" type="submit" name="register-submit" t="submit"></button></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
   </form>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="register-cancel" route-href="route: login;">Cancel</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="register-cancel" route-href="route: login;" t="cancel"></a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
 </template>
