--- a/src/productTools/identify/identi-fy.html
+++ b/src/productTools/identify/identi-fy.html
@@ -3,7 +3,8 @@
   <div class="col l12 m12 s12 scale-transition results-table lime">
     <div class='table-comtrolls-wrapper'>
       <a md-button="floating: true;" class="tr-green"><i class="material-icons icon-grey">${resultsTables[activeTable].tableIcon}</i></a>
-      <h5 class='table-controll-title white-text'>${resultsTables[activeTable].tableTitle}</h5>
+      <!-- <h5 class='table-controll-title white-text'>${resultsTables[activeTable].tableTitle}</h5> -->
+      <h5 class='table-controll-title white-text' t.bind="'results-table-' + activeTable + '-title'"></h5>
       <span>
         <a id='yesDelete' show.bind="resultsTables[activeTable].delete" md-button="floating: true;"
           md-tooltip="position: bottom; text: Yes, delete please;" md-waves="color: light;" class="tr-green"
@@ -21,13 +22,16 @@
     <table class="responsive-table striped centered">
       <thead class="collection-header lime">
         <tr>
-          <th repeat.for="colHead of resultsTables[activeTable].tableHeader">${colHead}</th>
+          <!-- <th repeat.for="colHead of resultsTables[activeTable].tableHeader">${colHead}</th> -->
+          <th repeat.for="colHead of resultsTables[activeTable].tableHeader" t.bind="'results-table-' + activeTable + '-' + colHead"></th>
+
           <th><a class="btn-flat"><i class="material-icons icon-grey">close</i></a></th>
         </tr>
       </thead>
       <tbody class="rows-font-size lime">
         <tr repeat.for="element of resultsTables[activeTable].table">
           <td repeat.for="colBody of element | objectKeys" innerhtml.bind="colBody"></td>
+
           <td><a md-button="floating: true;" md-tooltip="position: bottom; text: Delete this row;"
               md-waves="color: light;" class="tr-button btn-small"
               click.trigger="deleteResultsTableRow(activeTable, element.id)"><i
