Solvved all issues except language switcher. English translations are working also and user manamgement pages are optimized with t.bind=... there are no separate translations. Backend translations are still pending but will be solved in the same matter as preloader and tool notification translations. The backend will return only key and then the appropriate text will be selected from translation.jsons

--- a/src/changepassword/changepassword.html
+++ b/src/changepassword/changepassword.html
@@ -5,7 +5,7 @@
       <div class="col s12 m4 l8">
         <div validation-errors.bind="oldPasswordErrors">
           <input id="passwordOld" class="align-center" type.bind="passwordType" value.bind = "oldPassword & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]old-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of oldPasswordErrors">${errorInfo.error.message}</span></h5>
+          <h5 t="[prepend]old-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of oldPasswordErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -15,7 +15,7 @@
       <div class="col s12 m4 l8">
         <div validation-errors.bind="newPasswordErrors">
           <input id="passwordNew" class="align-center" type.bind="passwordType" value.bind = "newPassword & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]new-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of newPasswordErrors">${errorInfo.error.message}</span></h5>
+          <h5 t="[prepend]new-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of newPasswordErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -25,7 +25,7 @@
       <div class="col s12 m4 l8">
         <div validation-errors.bind="newPasswordConfirmErrors">
           <input id="passwordNewConfirm" class="align-center" type.bind="passwordType" value.bind = "newPasswordConfirm & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]new-password-again"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of newPasswordConfirmErrors">${errorInfo.error.message}</span></h5>
+          <h5 t="[prepend]new-password-again"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of newPasswordConfirmErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <span><i class="grow material-icons" click.trigger="revealPassword()">remove_red_eye</i></span>
