--- a/src/preloader/toolPreloader.html
+++ b/src/preloader/toolPreloader.html
@@ -1,7 +1,7 @@
 <template>
   <div class="tool-notification green">
     <div class="table-comtrolls-wrapper">
-      <p class="table-controll-title white-text">${toolPreloaderMessage}</p>
+      <p class="table-controll-title white-text" t.bind="toolPreloaderMessage"></p>
       <span></span>
     </div>
     <div class="preloader-wrapper big active tool-notification-confirm-button">
