--- a/src/changeemail/changeemail.html
+++ b/src/changeemail/changeemail.html
@@ -5,7 +5,7 @@
       <div class="col s12 m4 l8">
         <div validation-errors.bind="newEmailErrors">
           <input id="newEmail" class="align-center" type="text" value.bind = "newEmail & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]new-email"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of newEmailErrors">${errorInfo.error.message}</span></h5>
+          <h5 t="[prepend]new-email"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of newEmailErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
