--- a/src/notification/toolNotification.html
+++ b/src/notification/toolNotification.html
@@ -1,7 +1,7 @@
 <template>
   <div class="tool-notification red">
     <div class="table-comtrolls-wrapper">
-      <p class="table-controll-title white-text">${errorMessage}</p>
+      <p class="table-controll-title white-text" t.bind="errorMessage"></p>
       <span></span>
     </div>
     <div>
