--- a/src/resetpassword/requestResetPassword.html
+++ b/src/resetpassword/requestResetPassword.html
@@ -5,7 +5,7 @@
       <div class="col s12 m4 l8">
         <div validation-errors.bind="emailErrors">
           <input id="email" class="align-center" type="text" value.bind = "email & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]reg-email"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of emailErrors">${errorInfo.error.message}</span></h5>
+          <h5 t="[prepend]reg-email"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of emailErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
