--- a/src/resetpassword/resetpassword.html
+++ b/src/resetpassword/resetpassword.html
@@ -5,7 +5,7 @@
     <div class="col s12 m4 l8">
       <div validation-errors.bind="passwordErrors">
         <input id="newPassword" class="align-center"type.bind="passwordType" value.bind = "newPassword & validateOnChangeOrBlur"/>
-        <h5 t="[prepend]old-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors">${errorInfo.error.message}</span></h5>
+        <h5 t="[prepend]old-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors" t.bind="errorInfo.error.message"></span></h5>
       </div>
     </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -15,7 +15,7 @@
       <div class="col s12 m4 l8">
         <div validation-errors.bind="confirmPasswordErrors">
           <input id="confirmPassword" class="align-center" type.bind="passwordType" value.bind = "confirmPassword & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]confirm-password"><span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of confirmPasswordErrors">${errorInfo.error.message}</span></h5>
+          <h5 t="[prepend]confirm-password"><span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of confirmPasswordErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <span><i class="grow material-icons" click.trigger="revealPassword()">remove_red_eye</i></span>
