--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
   <require from="./styles.css"></require>
   <nav>
     <div class="nav-wrapper light-green darken-4">
-      <a href="#" class="brand-logo">Sattilia</a>
+      <a href="#" class="brand-logo logo-margin">Sattilia</a>
       <ul class="right">
         <li><a md-sidenav-collapse="ref.bind: sideNavRight;" if.bind="authenticated">${userNameDisplay}</a></li>
       </ul>
@@ -11,40 +11,40 @@
   </nav>
   <md-sidenav class="light-green darken-3" view-model.ref="sideNavRight" edge="right" close-on-click="true">
       <ul class="light-green darken-3 white-text">
-        <li md-waves class="sidenav-close" click.trigger="logout()" t="logout"></li>
+        <li md-waves class="sidenav-close side-nav-margin" click.trigger="logout()" t="logout"></li>
         <div class="collapsible-accordion">
           <ul md-collapsible="accordion: true;">
             <li>
               <ul class="collapsible-header no-padding">
-                <li md-waves t="profile"></li>
+                <li md-waves class="side-nav-margin" t="profile"></li>
               </ul>
               <ul class="collapsible-body light-green darken-2">
-                <li md-waves class="sidenav-close" t="[prepend]email">: ${userEmailDisplay}</li>
+                <li md-waves class="sidenav-close side-nav-margin" t="[prepend]email">: ${userEmailDisplay}</li>
               </ul>
             </li>
             <li>
               <ul class="collapsible-header no-padding">
-                <li md-waves t="user-settings"></li>
+                <li md-waves class="side-nav-margin" t="user-settings"></li>
               </ul>
               <ul class="collapsible-body light-green darken-2">
-                <li md-waves class="sidenav-close" route-href="route: changeemail;" click.trigger="changeEmailNavigate()" t="email-change"></li>
-                <li md-waves class="sidenav-close" route-href="route: changepassword;"click.trigger="changePasswordNavigate()" t="pass-change"></li>
+                <li md-waves class="sidenav-close side-nav-margin" route-href="route: changeemail;" click.trigger="changeEmailNavigate()" t="email-change"></li>
+                <li md-waves class="sidenav-close side-nav-margin" route-href="route: changepassword;"click.trigger="changePasswordNavigate()" t="pass-change"></li>
               </ul>
             </li>
             <li>
               <ul class="collapsible-header no-padding">
-                <li md-waves t="app-settings"></li>
+                <li md-waves class="side-nav-margin" t="app-settings"></li>
               </ul>
               <ul class="collapsible-body light-green darken-2">
-                <li md-waves class="no-padding light-green darken-2" md-dropdown="activates: language-dropdown; cover-trigger: false;" t="language-change"></li>
+                <li md-waves class="no-padding light-green darken-2 side-nav-margin" md-dropdown="activates: language-dropdown; cover-trigger: false;" t="language-change"></li>
                 <ul id="language-dropdown">
-                  <li md-waves><a class="light-green darken-2" click.trigger="changeLanguage('si')" t="language-change-slo"></a></li>
-                  <li md-waves><a class="light-green darken-2" click.trigger="changeLanguage('en')" t="language-change-en"></a></li>
+                  <li md-waves><a class="light-green darken-2 side-nav-margin" click.trigger="changeLanguage('si')" t="language-change-slo"></a></li>
+                  <li md-waves><a class="light-green darken-2 side-nav-margin" click.trigger="changeLanguage('en')" t="language-change-en"></a></li>
                 </ul>
               </ul>
             </li>
           </ul>
-          <li md-waves t="help"></li>
+          <li md-waves class="side-nav-margin" t="help"></li>
         </div>
       </ul>
     </md-sidenav>
