Major update is the backend translations long with new sisteem of user management notifications. These are now implemented similarly as the tool notifications via new template. Also added some minor updates to the visual apearance.

--- a/src/app.html
+++ b/src/app.html
@@ -38,8 +38,8 @@
               <ul class="collapsible-body light-green darken-2">
                 <li md-waves class="no-padding light-green darken-2 side-nav-margin" md-dropdown="activates: language-dropdown; cover-trigger: false;" t="language-change"></li>
                 <ul id="language-dropdown">
-                  <li md-waves><a class="light-green darken-2 side-nav-margin" click.trigger="changeLanguage('si')" t="language-change-slo"></a></li>
-                  <li md-waves><a class="light-green darken-2 side-nav-margin" click.trigger="changeLanguage('en')" t="language-change-en"></a></li>
+                  <li md-waves><a class="light-green darken-2" click.trigger="changeLanguage('si')" t="language-change-slo"></a></li>
+                  <li md-waves><a class="light-green darken-2" click.trigger="changeLanguage('en')" t="language-change-en"></a></li>
                 </ul>
               </ul>
             </li>
