--- a/src/changepassword/changepassword.html
+++ b/src/changepassword/changepassword.html
@@ -42,4 +42,5 @@
     <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="changePass-cancel" route-href="route: basemap;" t="cancel"></a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
+  <user-notification show.bind="userNotification"></user-notification>
 </template>
