--- a/src/login.html
+++ b/src/login.html
@@ -57,4 +57,5 @@
     <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light" name="facebook" href="https://www.facebook.com/LocalMapper" target="_blank" t="fb"></a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
+  <user-notification show.bind="userNotification"></user-notification>
 </template>
