--- a/src/resetpassword/requestResetPassword.html
+++ b/src/resetpassword/requestResetPassword.html
@@ -21,4 +21,5 @@
     <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="email-update-cancel" route-href="route: login;" t="cancel"></a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
+  <user-notification show.bind="userNotification"></user-notification>
 </template>
