--- a/src/registration.html
+++ b/src/registration.html
@@ -67,9 +67,6 @@
       <span><i class="grow material-icons" click.trigger="revealPassword()">remove_red_eye</i></span>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
-    <!-- NOTIFICATION -->
-    <require from='./notification/notification'></require>
-    <notification></notification>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light transparent-title" type="submit" name="register-submit" t="submit"></button></div>
@@ -81,4 +78,5 @@
     <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="register-cancel" route-href="route: login;" t="cancel"></a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
+  <user-notification show.bind="userNotification"></user-notification>
 </template>
