--- a/src/resetpassword/resetpassword.html
+++ b/src/resetpassword/resetpassword.html
@@ -5,7 +5,7 @@
     <div class="col s12 m4 l8">
       <div validation-errors.bind="passwordErrors">
         <input id="newPassword" class="align-center"type.bind="passwordType" value.bind = "newPassword & validateOnChangeOrBlur"/>
-        <h5 t="[prepend]old-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors" t.bind="errorInfo.error.message"></span></h5>
+        <h5 t="[prepend]new-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors" t.bind="errorInfo.error.message"></span></h5>
       </div>
     </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -33,5 +33,6 @@
       <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="password-reset-cancel" route-href="route: login;" t="cancel"></a></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
+    <user-notification show.bind="userNotification"></user-notification>
   </form>
 </template>
